# is-this-mit-nick-available

./: README.md  main.py  pyproject.toml
is_this_mit_nick_available/: __init__.py  directory.py
is_this_mit_nick_available/static/: styles.css
is_this_mit_nick_available/templates/: base.html  index.html  no.html  yes.html
