[tool.poetry]
name = "is-this-mit-nick-available"
version = "0.1.0"
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "is_this_mit_nick_available"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
